feat: add endpoint post /collectivities/{id}/activities/{activitiesId}/attendance
